[package]
name = "pallet-xcm-over-bridge-fee"
description = "Module that is able to adjust bridge message fee based on the bridge queues state."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }

# Bridge dependencies

bp-xcm-over-bridge-fee = { path = "../../primitives/xcm-over-bridge-fee", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"bp-xcm-over-bridge-fee/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
