[package]
name = "bp-bridge-hub-wococo"
description = "Primitives of BridgeHubWococo parachain runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

# Bridge Dependencies

bp-bridge-hub-rococo = { path = "../chain-bridge-hub-rococo" }

[features]
default = ["std"]
std = [
	"bp-bridge-hub-rococo/std",
]
