[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Primitives of Darwinia-like runtime."
edition     = "2021"
license     = "GPL-3.0"
name        = "bp-darwinia-core"
version     = "0.1.0"

[dependencies]
# crates.io
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info         = { version = "2.0.1", default-features = false, features = ["derive"] }
# paritytech
bp-messages   = { default-features = false, path = "../messages" }
bp-runtime    = { default-features = false, path = "../runtime" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	# crates.io
	"parity-scale-codec/std",
	"scale-info/std",
	# paritytech
	"bp-messages/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
