[package]
name = "bp-header-chain"
description = "A common interface for describing what a bridge pallet should be able to do."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies.frame-support]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate/"

[features]
default = ["std"]
std = [
	"frame-support/std",
]
