[package]
name = "bp-header-chain"
description = "A common interface for describing what a bridge pallet should be able to do."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }
serde = { version = "1.0", optional = true }
finality-grandpa = { version = "0.12.3", default-features = false }

# Substrate Dependencies

sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"finality-grandpa/std",
	"serde/std",
	"sp-keyring",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
]
