[package]
name = "bp-substrate"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sp-finality-grandpa]
version = "2.0.0-rc5"
tag = 'v2.0.0-rc5'
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.parity-scale-codec]
version = "1.3.1"
default-features = false
features = ["derive"]

[features]
default = ["std"]
std = [
	"sp-finality-grandpa/std",
]
