[package]
name = "bp-xcm-bridge-hub-router"
description = "Primitives of the xcm-bridge-hub fee pallet."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "bit-vec"] }
scale-info = { version = "2.8.0", default-features = false, features = ["bit-vec", "derive", "serde"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

# Bridge dependencies

bp-messages = { path = "../messages", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
#sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
#sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
#sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"bp-messages/std",
#	"bp-header-chain/std",
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"serde/std",
#	"sp-core/std",
#	"sp-io/std",
#	"sp-std/std",
	"sp-runtime/std",
]
