[package]
name = "bp-xcm-bridge-hub-router"
description = "Primitives of the pallet-xcm-bridge-hub-router."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.6.0", default-features = false, features = ["derive"] }

# Bridge Dependencies

bp-xcm-bridge-hub = { path = "../xcm-bridge-hub", default-features = false }

# Substrate Dependencies

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"bp-xcm-bridge-hub/std",
	"sp-runtime/std",
]
